Fixed layout on smaller devices

--- a/styles/ImageList.module.css
+++ b/styles/ImageList.module.css
@@ -1,8 +1,8 @@
 .container {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  padding-inline: 1rem;
+  padding: 1rem 1rem 2rem;
   width: 100%;
+  align-content: center;
+  margin: auto;
   text-align: center;
 }
 
